# Simulife

./: .gitignore  DEVELOPMENT_LOG.md  QUICK_START_GUIDE.md  README.md  api_server.py  config.py.example  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
Frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
Frontend/src/: index.css  main.tsx
Frontend/src/components/: AgentInspector.tsx  CivilizationStatus.tsx  ControlPanel.tsx  MilestoneTracker.tsx  ObservatoryDashboard.tsx  RecentEvents.tsx  WorldView3D.tsx
Frontend/src/pages/: Index.tsx
Frontend/src/services/: api.ts
data/agent_configs/: aedan.json  kara.json  lara.json  nyla.json  theron.json
data/memory_faiss/: Aedan_index.faiss  Aedan_memories.json  Kara_index.faiss  Kara_memories.json  Lara_index.faiss  Lara_memories.json  Nyla_index.faiss  Nyla_memories.json  Theron_index.faiss  Theron_memories.json
data/saves/auto_save_day_1/: agents.json  simulation_stats.json  world_state.json
data/saves/demo_save/: agents.json  simulation_stats.json  world_state.json
data/saves/final_save_day_1/: agents.json  simulation_stats.json  world_state.json
data/saves/final_save_day_2/: agents.json  simulation_stats.json  world_state.json
data/saves/final_save_day_3/: agents.json  simulation_stats.json  world_state.json
data/saves/final_save_day_7/: agents.json  simulation_stats.json  world_state.json
data/saves/phase_test_3days/auto_save_day_1/: agents.json  simulation_stats.json  world_state.json
data/saves/phase_test_3days/final_save_day_3/: agents.json  simulation_stats.json  world_state.json
docs/: PHASE_10_HUMAN_EMOTIONS_DESIGN.md  PHASE_9_DESIGN.md  README.md
docs/phases/: PHASE_TRACKING_TEMPLATE.md
simulife/: __init__.py
simulife/agents/: __init__.py  base_agent.py  llm_integration.py  memory_manager.py  reproduction.py
simulife/engine/: __init__.py  advanced_events.py  civilizational_milestones_system.py  conflict_system.py  consciousness_metrics_system.py  crisis_response_system.py  cultural_artifacts.py  cultural_movements_system.py  cultural_system.py  economic_emergence_system.py  emotional_complexity_system.py  environmental_system.py  family_bonds_system.py  generational_culture_system.py  genetic_disease_system.py  group_dynamics.py  inter_group_diplomacy_system.py  life_purpose_system.py  love_romance_system.py  meta_cognition_system.py  mortality_system.py  phase_detector.py  population_dynamics.py  population_pressure_system.py  resource_system.py  self_awareness_system.py  simulation_loop.py  skill_system.py  social_institutions_system.py  specialization_system.py  technology_system.py  world_state.py
tests/: __init__.py  test_phase10_systems.py
